Remove prod dependency on Guava